<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Time Tracking</string>
    <string name="date">Date</string>
    <string name="fromTime">From</string>
    <string name="toTime">to</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="reset">Reset</string>
    <string name="title_activity_main">Time Tracking</string>
    <string name="how_to_exit">Press \'BACK\' again to exit the app.</string>
    <string name="clock">O\'Clock</string>
    <string name="description">Description</string>
    <string name="project">Project:</string>
    <string name="addProject">Project Name</string>
    <string name="defaultFromTime">09:00</string>
    <string name="defaultToTime">10:00</string>

    <string name="ecEmptySpinner">Please add a project first.</string>
    <string name="ecEmptyInput">Please insert something.</string>
    <string name="ecDuplicate">Input is already existent.</string>
</resources>
