<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/btnDate"
        android:layout_width="36sp"
        android:layout_height="36sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/date" />

    <TextView
        android:id="@+id/inpDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickInpDate"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btnDate"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgFromTime"
        android:layout_width="36sp"
        android:layout_height="36sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDate"
        android:contentDescription="@string/defaultFromTime" />

    <TextView
        android:id="@+id/lblFromTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/fromTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgFromTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/inpFromTime"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickInpFromTime"
        android:text="@string/defaultFromTime"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lblFromTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/lblToTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/toTime"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/inpFromTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/inpToTime"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickInpToTime"
        android:text="@string/defaultToTime"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/lblToTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <TextView
        android:id="@+id/lblClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/clock"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/inpToTime"
        app:layout_constraintTop_toBottomOf="@+id/btnDate" />

    <ImageView
        android:id="@+id/imgProject"
        android:layout_width="36sp"
        android:layout_height="36sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_star"
        android:contentDescription="@string/project"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFromTime" />

    <Spinner
        android:id="@+id/spnProject"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toStartOf="@+id/btnDelProject"
        app:layout_constraintStart_toEndOf="@+id/imgProject"
        app:layout_constraintTop_toBottomOf="@+id/imgFromTime" />

    <ImageButton
        android:id="@+id/btnDelProject"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/addProject"
        android:focusable="true"
        android:onClick="onClickBtnDelProject"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_minus"
        app:layout_constraintEnd_toStartOf="@+id/btnAddProject"
        app:layout_constraintTop_toBottomOf="@+id/imgFromTime" />

    <ImageButton
        android:id="@+id/btnAddProject"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_plus"
        android:contentDescription="@string/addProject"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClickBtnAddProjectPopUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFromTime" />

    <EditText
        android:id="@+id/inpDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:isScrollContainer="false"
        android:maxLength="20"
        android:singleLine="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProject"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:onClick="onClickBtnAddTermin"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpDescription" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:onClick="onClickBtnResetTermin"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpDescription" />

</android.support.constraint.ConstraintLayout>